[package]
name = "subspace-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subspace_farmer = {  package="subspace-farmer", git = "https://github.com/subspace/subspace", branch="main"  }
clap = { version = "4.3.21", features = ["derive","cargo"] }
tokio = { version = "1.34.0", features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }
